# datathon-7mlet-grupo-06

./: .env.example  .gitignore  LICENSE  Makefile  README.md  enxugar.sh  pyproject.toml
data/golden_set/: evaluation_cases.jsonl
data/kaggle/: README.md
data/processed/: dataset_metadata.json  modeling_table.parquet
data/synthetic_enrichment/policies/: canais.md  exploracao.md  ofertas.md  suitability.md
docs/: algorithmic-strategy.md  api-contract.md  architecture-aws.md  data-dictionary.md  decisoes-de-design.md  demo-day-pitch.md  lgpd-plan.md  model-card.md  system-card.md  technical-report.md
infra/aws/: architecture.md  deployment-plan.md
models/: policy-v1.json
notebooks/: 01-eda-e-baseline.ipynb  eda-e-baseline.ipynb
reports/: data-quality.md  fairness-review.md  observability-plan.md  offline-evaluation.md  retraining-approval-plan.md
src/datathon_offerexp/: app.py  assistant.py  contracts.py  data_loader.py  evaluation.py  examples.py  golden.py  offline_eval.py  policies.py  policy_store.py
src/tests/: test_app.py  test_assistant.py  test_contracts.py  test_data_loader.py  test_decision_log.py  test_examples.py  test_golden.py  test_policies.py
