[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-datathon"
version = "0.1.0"
description = "Plataforma de experimentacao adaptativa (multi-armed bandits) para ofertas financeiras - Datathon MLET7 FIAP."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Grupo XX - MLET7" }]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.0",
    "mlflow>=2.10",
    "anthropic>=0.39",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "ruff>=0.4", "jupyter>=1.0"]

[project.scripts]
offerexp-eval = "datathon_offerexp.evaluation:main"
offerexp-offline = "datathon_offerexp.offline_eval:main"
offerexp-golden = "datathon_offerexp.golden:build_golden_set"

[tool.setuptools.packages.find]
where = ["src"]
include = ["datathon_offerexp*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
addopts = "-q"
